Remove basic.css, put styling into main.css

--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -6,12 +6,12 @@
         <title>{{template "title" .}} - Party Finder</title>
         <link rel='shortcut icon' href='/static/img/favicon.ico' type='image/x-icon'>
         <link rel='stylesheet' href='/static/css/reset.min.css'>
-        <link rel='stylesheet' href='/static/css/basic.css'>
         <link rel='stylesheet' href='/static/css/main.css'>
+        <style>@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');</style>
     </head>
         <body>
           <header class="center header__content">
-            <h1><a href="/">Party Finder</a></h1>
+            <h1 class="mt"><a href="/">Party Finder</a></h1>
             <img class="center"src="/static/img/location-map-finding-lost.svg" alt="location map" width="50rem" height="50rem" alt="conversation">
           </header>
           <nav class="wrapper cluster nav__content">
