Fix button/link styles, update README

--- a/ui/html/party_detail.page.tmpl
+++ b/ui/html/party_detail.page.tmpl
@@ -14,7 +14,7 @@
           <div class="cluster center">
             <div>
               <button>Apply 👍</button>
-              <button><a href="/parties/{{.ID}}/update">Update 🖉</a></button>
+              <a href="/parties/{{.ID}}/update"><button>Update 🖉</button></a>
               <button>Bookmark 🔖</button>
             </div>
               <form action="/parties/{{.ID}}/delete" method="POST">
