Create form for a new party

--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -12,12 +12,12 @@
         <body>
           <header class="center header__content">
             <h1 class="mt"><a href="/">Party Finder</a></h1>
-            <img class="center"src="/static/img/location-map-finding-lost.svg" alt="location map" width="50rem" height="50rem" alt="conversation">
+            <img class="center"src="/static/img/location-map-finding-lost.svg" alt="location map" width="50rem" height="50rem" alt="map">
           </header>
           <nav class="wrapper cluster nav__content">
             <div>
               <a href="/">Home</a>
-              <a href="/party/create">New Party</a>
+              <a href="/parties/create">New Party</a>
             </div>
           </nav>
           <main class="wrapper stack main__content">{{template "main" .}}</main>
