--- a/ui/html/party_detail.page.tmpl
+++ b/ui/html/party_detail.page.tmpl
@@ -13,7 +13,7 @@
           </div>
           <div class="cluster center">
             <div>
-              <button>Apply 👍</button>
+              <button class="success">Apply 👍</button>
               <a href="/parties/{{.ID}}/update"><button>Update 🖉</button></a>
               <button>Bookmark 🔖</button>
             </div>
