--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -160,6 +160,11 @@ button.success {
   display: block;
 }
 
+button.danger--button {
+  background-color: red;
+}
+
+
 .footer {
   flex-shrink: 0;
   background-color: var(--color-secondary);
