--- a/ui/static/css/main.css
+++ b/ui/static/css/main.css
@@ -5,24 +5,23 @@
   --s-1: calc(var(--s0) / var(--ratio));
   --s0: 1rem;
   --measure: 60ch;
-  --color-links: #457b9d;
   --color-dark: #1d3557;
   --color-light: #f1faee;
   --color-secondary: #a8dadc;
+  --color-tertiary: #457b9d;
   --color-contrast: #e63946;
   --color-error: #c0392b;
   --color-danger: #f44336;
   --color-success: #8ad671;
 }
 
-a {
-  color: var(--color-links);
-  text-decoration: none;
+:focus {
+  outline: 1px dashed var(--color-tertiary);
+  outline-offset: 0.25rem;
 }
 
-a:hover {
-  color: var(--color-contrast);
-  text-decoration: underline;
+main:focus {
+  outline: none;
 }
 
 html,
@@ -33,6 +32,16 @@ body {
 body {
   display: flex;
   flex-direction: column;
+}
+
+a {
+  color: var(--color-tertiary);
+  text-decoration: none;
+}
+
+a:hover {
+  color: var(--color-contrast);
+  text-decoration: underline;
 }
 
 .header__content {
@@ -141,7 +150,6 @@ textarea {
 }
 
 button {
-  outline: none;
   border: 1px solid var(--color-dark);
   border-radius: 3px;
   background-color: #efefef;
@@ -164,14 +172,13 @@ button.danger--button {
   background-color: red;
 }
 
-
 .footer {
   flex-shrink: 0;
   background-color: var(--color-secondary);
   text-align: center;
 }
 
-footer > *  {
+footer > * {
   margin: 0.3rem;
 }
 
