--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -20,7 +20,12 @@
               <a href="/parties/create">New Party</a>
             </div>
           </nav>
-          <main class="wrapper stack main__content">{{template "main" .}}</main>
+          <main class="wrapper stack main__content">
+            {{with .Flash}}
+            <div class="flash">{{.}}</div>
+            {{end}}
+            {{template "main" .}}
+          </main>
         </body>
     {{template "footer" .}}
 </html>
