Update css for flash & dark theme

--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -22,7 +22,7 @@
           </nav>
           <main class="wrapper stack main__content">
             {{with .Flash}}
-            <div class="flash">{{.}}</div>
+            <div class="flash center">{{.}}</div>
             {{end}}
             {{template "main" .}}
           </main>
