Add flash messages to response

--- a/ui/html/base.layout.tmpl
+++ b/ui/html/base.layout.tmpl
@@ -22,7 +22,9 @@
           </nav>
           <main class="wrapper stack main__content">
             {{with .Flash}}
-            <div class="flash center">{{.}}</div>
+            <div class="center flash__container">
+              <div class="flash">{{.}}</div>
+            </div>
             {{end}}
             {{template "main" .}}
           </main>
